# Recommend_API

./: README.md  docker-compose.yaml  pyproject.toml
docker/: Dockerfile
models/: catboost_model_1  catboost_model_2
notebooks/: model_1.ipynb  model_2.ipynb  stat-test.ipynb
src/: ab_app.py
