[tool.poetry]
name = "recommendapi"
version = "0.1.0"
description = ""
authors = ["Evgenia Felagereva <efelagereva@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.68.0"
sqlalchemy = "^1.4.25"
catboost = "^0.26"
scikit-learn = "^0.24.2"
pydantic = "^1.8.2"
uvicorn = "^0.15.0"
psycopg2 = "^2.9.1"
python-dotenv = "^0.19.1"
python-dateutil = "^2.8.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pre-commit = "^3.5.0"
jupyterlab = "^4.0.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
